...
                                        text = ""
                                        onSearch(text)
                                    } else {
                                        onExpandedChange(false)
                                    }
                                },
                                imageVector = Icons.Default.Clear, contentDescription = "delete text"
                            )
                        }
                    },
                )
            },
            expanded = expanded,
...
